<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/viewContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:visibility="gone"
            tools:visibility="visible">
            <TextView
                android:id="@+id/lblTypes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/Title"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="16dp"
                android:text="@string/types"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvTypes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/lblTypes"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_pokemon_type"
                tools:itemCount="2"/>

            <TextView
                android:id="@+id/lblHeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/Title"
                app:layout_constraintTop_toBottomOf="@id/rvTypes"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="20dp"
                android:text="@string/height"/>

            <TextView
                android:id="@+id/tvHeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/lblHeight"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="12dp"
                android:textSize="16sp"
                app:drawableStartCompat="@drawable/ic_height"
                tools:text="1.6m" />

            <TextView
                android:id="@+id/lblWeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/Title"
                app:layout_constraintTop_toBottomOf="@id/tvHeight"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="20dp"
                android:text="@string/weight"/>

            <TextView
                android:id="@+id/tvWeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/lblWeight"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="12dp"
                android:textSize="16sp"
                app:drawableStartCompat="@drawable/ic_weight"
                android:drawablePadding="4dp"
                tools:text="45Kg" />

            <TextView
                android:id="@+id/lblAbilities"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/Title"
                app:layout_constraintTop_toBottomOf="@id/tvWeight"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="20dp"
                android:text="@string/abilities"/>

            <TextView
                android:id="@+id/tvAbilities"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/lblAbilities"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="12dp"
                android:layout_marginHorizontal="24dp"
                android:textSize="16sp"
                android:gravity="center"
                tools:text="Overgrow" />

            <TextView
                android:id="@+id/lblMoves"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/Title"
                app:layout_constraintTop_toBottomOf="@id/tvAbilities"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="20dp"
                android:text="@string/moves"/>

            <TextView
                android:id="@+id/tvMoves"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/lblMoves"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintVertical_bias="0"
                android:layout_marginVertical="12dp"
                android:layout_marginHorizontal="24dp"
                android:textSize="16sp"
                android:gravity="center"
                tools:text="Razor-wind" />


        </androidx.constraintlayout.widget.ConstraintLayout>
        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"
            android:visibility="gone"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>